--- a/.env.example
+++ b/.env.example
@@ -27,12 +27,12 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_MAILER=smtp
-MAIL_HOST=mailhog
-MAIL_PORT=1025
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS=null
+MAIL_HOST=mail.ilovebite.in
+MAIL_PORT=465
+MAIL_USERNAME=info@ilovebite.com
+MAIL_PASSWORD=lovebIt3!
+MAIL_ENCRYPTION=ssl
+MAIL_FROM_ADDRESS=info@ilovebite.com
 MAIL_FROM_NAME="${APP_NAME}"
 
 AWS_ACCESS_KEY_ID=
